--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Solitude Free Responsive Template | Template Stock</title>
+    <title>Andrea Cacioli</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -44,16 +44,16 @@
 	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 	          	<i class="el-icon-lines"></i>
 	          </button>
-	          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><h1> Solitude</h1></a>
+	          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><h1>Andrea Cacioli</h1></a>
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          	<ul class="nav navbar-nav">
 		            <li><a href="#home" class="smoothScroll">Home</a></li>
-					<li> <a href="#about" class="smoothScroll">About</a></li>
-					<li> <a href="#services" class="smoothScroll">Services</a></li>					
-					<li> <a href="#team" class="smoothScroll">Team</a></li>
-					<li> <a href="#portfolio" class="smoothScroll">Portfolio</a></li>
-					<li> <a href="#blog" class="smoothScroll">Blog</a></li>
+					<li> <a href="#about" class="smoothScroll">About Me</a></li>
+					<li> <a href="#services" class="smoothScroll">What I Do</a></li>	
+					<li> <a href="#team" class="smoothScroll">References</a></li>				
+					<li> <a href="#portfolio" class="smoothScroll">What I Have Done</a></li>
+					<li> <a href="#blog" class="smoothScroll">Info</a></li>
 					<li> <a href="#contact" class="smoothScroll">Contact</a></li>
 				</ul>
 	        </div><!--/.nav-collapse -->
@@ -66,10 +66,10 @@
 		<!-- ==== HEADERWRAP ==== -->
 	    <div id="headerwrap" id="home" name="home">
 			<header class="clearfix">
-	  		 		<h1 class="animated bounceIn">Template Stock</h1>
-	  		 		<p class="animated slideInLeft">Let Us Help You Be Something Awesome.</p>
-	  		 		<p class="animated slideInRight">We Are Here For You.</p>
-	  		 		<a href="#about" class="btn homebtn smoothScroll">Learn More <i class="el-icon-chevron-down homeicon"></i></a>
+	  		 		<h1 class="animated bounceIn">Nice to meet you!</h1>
+	  		 		<p class="animated slideInLeft">This is Andrea Cacioli's website.</p>
+	  		 		<p class="animated slideInRight">You can think of this website as a collection of what I'm most proud of.</p>
+	  		 		<a href="#about" class="btn homebtn smoothScroll">Get to know me!<i class="el-icon-chevron-down homeicon"></i></a>
 	  		</header>	    
 	    </div><!-- /headerwrap -->
 
@@ -448,7 +448,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
@@ -466,7 +466,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
@@ -484,7 +484,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
@@ -502,7 +502,7 @@
 					<div class="col-md-10 col-sm-10 col-xs-10 blog-content fade-up">
 						<h2>A Beautiful Story</h2>
 						<p>Armed with insight, we embark on designing the right brand experience that engages the audience. It encompasses both the strategic direction and creative execution that solves a business problem and brings the brand to life.</p>
-						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our client’s brand.</p>
+						<p>In the create phase, the big idea is unleashed to the world through different media touchpoints. This is when we watch the audience fall in love all over again with our clientï¿½s brand.</p>
 						<p><a href="single-post.html" class="btn btn-success">Read More</a></p>
 					</div>
 				</div><!-- /col -->
