Updated About Page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#home" class="smoothScroll">Home</a></li>
-                        <li> <a href="#about" class="smoothScroll">About Me</a></li>
+                        <li> <a href="#abouttop" class="smoothScroll">About Me</a></li>
                         <li> <a href="#services" class="smoothScroll">What I Do</a></li>
                         <li> <a href="#team" class="smoothScroll">References</a></li>
                         <li> <a href="#portfolio" class="smoothScroll">What I Have Done</a></li>
@@ -74,13 +74,13 @@
             <h1 class="animated bounceIn">Nice to meet you!</h1>
             <p class="animated slideInLeft">This is Andrea Cacioli's website.</p>
             <p class="animated slideInRight">You can think of this website as a collection of what I'm most proud of.</p>
-            <a href="#about" class="btn homebtn smoothScroll">Get to know me!<i class="el-icon-chevron-down homeicon"></i></a>
+            <a href="#abouttop" class="btn homebtn smoothScroll">Get to know me!<i class="el-icon-chevron-down homeicon"></i></a>
         </header>
     </div>
     <!-- /headerwrap -->
 
     <!--  SERVICES -->
-    <div class="greywrap">
+    <div class="greywrap" id="abouttop">
         <div class="container" id="about" name="about">
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-6 callout">
@@ -104,11 +104,11 @@
                 </div>
 
                 <div class="col-md-4 col-sm-4 col-xs-6 callout">
-                    <i class="material-icons">code</i>
+                    <i class="material-icons">groups</i>
                     <div class="col-md-9 fade-up service-info">
                         <div class="fade-up">
-                            <h2>Hire Us Today</h2>
-                            <p>Parlors men express had private village man. Discovery moonlight recommend all one not. Indulged to answered prospect it bachelor is he bringing shutters. Pronounce forfeited mr direction oh he dashwoods ye unwilling.</p>
+                            <h2>Leadership Attitude</h2>
+                            <p> I naturally tend to be a leader. Every project I take part in is usually aided by this propension.</p>
                         </div>
                     </div>
                 </div>
@@ -119,18 +119,29 @@
     <!-- ==== ABOUT ==== -->
     <div class="container" id="about" name="about">
         <div class="row white">
-            <h1 class="fade-down centered">A LITTLE ABOUT US</h1>
+            <h1 class="fade-down centered">A LITTLE ABOUT ME</h1>
             <hr>
 
             <div class="fade-up col-md-6">
-                <p>Insipidity the sufficient discretion imprudence resolution sir him decisively. Proceed how any engaged visitor. Explained propriety off out perpetual his you. Feel sold off felt nay rose met you. We so entreaties cultivated astonished
-                    is. Was sister for few longer mrs sudden talent become. Done may bore quit evil old mile. If likely am of beauty tastes. </p>
+                <p>
+                    I am a Computer Science student at <b>UniTo</b> who is currently settled in Turin, Italy. 
+                </p>
+                <p>
+                    CS has revealed to be my passion ever since I was little: an outstanding performance at the computer science Olympics in Italy really paved the way to my future.
+                    At the time I was the <b>second best programmer of my age in the whole country</b>. A lot of time has passed since then, though, and things have changed very much: now I completely abandoned competitive programming to study it in a more mathematical and the thorough way.
+                    My marks are high and my interest towards upcoming technology is sky high.
+                </p>
             </div>
             <!-- col-md-6 -->
 
             <div class="fade-up col-md-6">
-                <p>Arrived totally in as between private. Favour of so as on pretty though elinor direct. Reasonable estimating be alteration we themselves entreaties me of reasonably. Direct wished so be expect polite valley. Whose asked stand it sense
-                    no spoil to. Prudent you too his conduct feeling limited and. Side he lose paid as hope so face upon be. Goodness did suitable learning put. </p>
+                <p>
+                    In my free time I like to keep updated with the news about the things that I'm most interested in like video games, nature, and technology.
+                    Having said that, something I really enjoy doing is making things, this interest has led me to develop a decent skillset at <b>embedded programming for microcontrollers</b> like Arduino, RaspberryPi and equivalents.
+                </p>
+                <p>
+                    Another important aspect of my life is video-games and the <b>video games industry</b>. Hopefully one day I'll be able to work as a game developer and I really wish I could create something fun for the rest of the world.
+                </p>
             </div>
             <!-- col-md-6 -->
         </div>
