Halfway through the resume

--- a/index.html
+++ b/index.html
@@ -62,17 +62,25 @@
                                 <p>I'm</p>
                                 <h1>Andrea Cacioli</h1>
                                 <h2></h2>
-                                <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
+                                <div class="typed-text">Computer Science Student, Microcontrollers Enthusiast, Unix Lover, Version Control Ninja, Videogames Player</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="">Hire Me</a>
-                                <a class="btn" href="">Contact Me</a>
+                                <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com">Hire Me</a>
+                                <a class="btn" href="tel:+393404594849">Contact Me</a>
+                            </div>
+                            <div style="margin: 10px;" id="separator"></div>
+                            <div class="social">
+                                <a href="https://github.com/AndreaCacioli"><i class="fab fa-github"></i></a>
+                                <a href="https://www.linkedin.com/in/andrea-cacioli-a295161a3/"><i class="fab fa-linkedin-in"></i></a>
+                                <a href="https://www.instagram.com/andreacacioli99/"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.youtube.com/c/TutorialCacioli"><i class="fab fa-youtube"></i></a>
+                                <a href="https://www.twitch.tv/polletto_rl"><i class="fab fa-twitch"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
-                            <img src="img/hero.png" alt="Hero Image">
+                            <img src="img/hero.png" alt="Hero Image"> <!--Ricorda di mettere la tua foto-->
                         </div>
                     </div>
                 </div>
@@ -94,40 +102,60 @@
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <h2>UniTo Student</h2>
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
+                                    I study CS at the University of Torino (<a href="https://www.unito.it/">UniTo</a>). I am a very keen learner and I always strive to get the maximum result out of everything I do.
+                                </p>
+                                <p>
+                                  Here are some of the skills I acquired during my studies and other experiences.
                                 </p>
                             </div>
                             <div class="skills">
                                 <div class="skill-name">
-                                    <p>Web Design</p><p>85%</p>
+                                    <p>Version Control</p><p>85%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Web Development</p><p>95%</p>
+                                    <p>Web Development</p><p>50%</p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Apps Design</p><p>90%</p>
+                                    <p>Unix/Back-End</p><p>90%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <div class="skill-name">
-                                    <p>Apps Development</p><p>85%</p>
+                                    <p>Embedded Software</p><p>80%</p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="about-text" style="margin-top: 10px;">
+                                    <p>
+                                        Here are some things I know very little about and would like to learn in the near future.
+                                    </p>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Game Development</p><p>20%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div class="skill-name">
+                                    <p>Artificial Intelligence</p><p>1%</p>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
-                            <a class="btn" href="">Learn More</a>
+                            <a class="btn" href="">What I learnt at UniTo</a> <!--Add link to page with work from university-->
                         </div>
                     </div>
                 </div>
@@ -141,7 +169,7 @@
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>What I do</p>
-                    <h2>Awesome Quality Services</h2>
+                    <h2>What I can do for YOU!</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
@@ -150,9 +178,9 @@
                                 <i class="fa fa-laptop"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Web Design</h3>
+                                <h3>Make a serverless website similar to this!</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    If you <b>like what you're seeing</b> and you want something similar to this you can contact me and we can arrange a reesonable price for you to get one as well!
                                 </p>
                             </div>
                         </div>
@@ -160,12 +188,12 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa fa-laptop-code"></i>
+                                <i class="fas fa-terminal"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Web Development</h3>
+                                <h3>CLI App</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    I can create for you an app in <b>C - C# - C++ - Java - Python</b>. I can definitely make it work offline but if you need online support we can think of something for you.
                                 </p>
                             </div>
                         </div>
@@ -173,12 +201,12 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fab fa-android"></i>
+                                <i class="fab fa-java"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Apps Design</h3>
+                                <h3>JavaFX Desktop Apps</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    If what you need is a desktop app that can be portable onto macOS and Linux, Then JavaFX is what you need.
                                 </p>
                             </div>
                         </div>
@@ -186,12 +214,12 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fab fa-apple"></i>
+                                <i class="fas fa-magic"></i>
                             </div>
                             <div class="service-text">
-                                <h3>Apps Development</h3>
+                                <h3>Life Automation</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi facilis ornare velit non
+                                    With a good amount of python and microcontrollers you can automate pretty much everything. I can help with that: from every day activities like checking emails and creating PDFs with the photos you like, to creating automated electrical appliances
                                 </p>
                             </div>
                         </div>
@@ -206,53 +234,54 @@
         <div class="experience" id="experience">
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
-                    <p>My Resume</p>
-                    <h2>Working Experience</h2>
+                    <p>My Life</p>
+                    <h2>A recap of all my Life</h2>
                 </header>
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <div class="timeline-date">2000</div>
+                            <h2>I was Born</h2>
+                            <h4>Turin, Italy</h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                What can I say?! I didn't plan this.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">2006 - 2014</div>
+                            <h2>Elementary and Middle School</h2>
+                            <h4><a href="https://istitutosociale.it/">Istituto Sociale, Turin, Italy</a></h4>
+                            <h4><a href="https://www.mconsolatrice.it/">Istituto Maria Consolatrice, Turin, Italy</a></h4>
+                            <p>
+                                Two of the best private schools in Turin gave me the foundations to learn everything that came after.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
+                        <div class="timeline-text">
+                            <div class="timeline-date">2015 and 2018</div>
+                            <h2>English Second Lenguage</h2>
+                            <h4>Malta and Liverpool</h4>
+                            <p>
+                                I spent most of my holidays learning English during the first year at the <b><a href="http://ictqmalta.com/">ICTQ school</a></b>, but as I reached proficiency in the language I felt like it wasn't enough and wanted to continue. Because of this I decided to take on another adventure at the <b><a href="https://www.lse.uk.net/">Liverpool School of English</a></b> to learn more about their culture.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
+                            <h2>Computer Science Bachelor</h2>
+                            <h4><a href="https://www.unito.it/">UniTo, Turin, Italy</a></h4>
                             <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
+                                The place where I learnt most of my skills. From the basics of computer programming to the fundamentals of computers architectures and networks.
                             </p>
                         </div>
                     </div>
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
-                        <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
-                            <h2>Web Developer</h2>
-                            <h4>Soft Agency, San Francisco, CA</h4>
-                            <p>
-                                Lorem ipsum dolor sit amet elit. Aliquam odio dolor, id luctus erat sagittis non. Ut blandit semper pretium.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
-                        <div class="timeline-text">
-                            <div class="timeline-date">2045 - 2050</div>
+                            <div class="timeline-date">2019 - 2022</div>
                             <h2>Web Developer</h2>
                             <h4>Soft Agency, San Francisco, CA</h4>
                             <p>
