--- a/index.html
+++ b/index.html
@@ -383,33 +383,33 @@
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>Pricing Plan</p>
-                    <h2>Affordable Price</h2>
+                    <h2>My Prices</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="price-item">
                             <div class="price-header">
                                 <div class="price-title">
-                                    <h2>Basic</h2>
+                                    <h2>Tutoring</h2>
                                 </div>
                                 <div class="price-prices">
-                                    <h2><small>$</small>49<span>/ mo</span></h2>
+                                    <h2><small>€</small>25<span>/ hr</span></h2>
                                 </div>
                             </div>
                             <div class="price-body">
                                 <div class="price-description">
                                     <ul>
-                                        <li>Bootstrap 4</li>
-                                        <li>Font Awesome 5</li>
-                                        <li>Responsive Design</li>
-                                        <li>Browser Compatibility</li>
-                                        <li>Easy To Use</li>
+                                        <li>Clear</li>
+                                        <li>Experienced</li>
+                                        <li>Motivated</li>
+                                        <li>Every Scientific Subject</li>
+                                        <li>Available Everyday</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="price-footer">
                                 <div class="price-action">
-                                    <a class="btn" href="">Order Now</a>
+                                    <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com?subject=Tutoring Reservation">I want you!</a>
                                 </div>
                             </div>
                         </div>
@@ -418,26 +418,26 @@
                         <div class="price-item featured-item">
                             <div class="price-header">
                                 <div class="price-title">
-                                    <h2>Standard</h2>
+                                    <h2>Simple Offline App</h2>
                                 </div>
                                 <div class="price-prices">
-                                    <h2><small>$</small>99<span>/ mo</span></h2>
+                                    <h2><small>€</small>299</h2>
                                 </div>
                             </div>
                             <div class="price-body">
                                 <div class="price-description">
                                     <ul>
-                                        <li>Bootstrap 4</li>
-                                        <li>Font Awesome 5</li>
-                                        <li>Responsive Design</li>
-                                        <li>Browser Compatibility</li>
+                                        <li>C / C# / C++ / Java / Python</li>
+                                        <li>Fast Delivery</li>
+                                        <li>Optimised</li>
+                                        <li>Well Documented</li>
                                         <li>Easy To Use</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="price-footer">
                                 <div class="price-action">
-                                    <a class="btn" href="">Order Now</a>
+                                    <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com?subject=Offline App Request">Order Now</a>
                                 </div>
                             </div>
                         </div>
@@ -446,19 +446,20 @@
                         <div class="price-item">
                             <div class="price-header">
                                 <div class="price-title">
-                                    <h2>Premium</h2>
+                                    <h2>Online App / Website</h2>
                                 </div>
                                 <div class="price-prices">
-                                    <h2><small>$</small>149<span>/ mo</span></h2>
+                                    <h2>Contact Me!</h2>
                                 </div>
                             </div>
                             <div class="price-body">
                                 <div class="price-description">
                                     <ul>
-                                        <li>Bootstrap 4</li>
-                                        <li>Font Awesome 5</li>
-                                        <li>Responsive Design</li>
-                                        <li>Browser Compatibility</li>
+                                        <li>Stunning GUI</li>
+                                        <li>Fast And Well-Built</li>
+                                        <li>3yrs Warranty</li>
+                                        <li>Optimised</li>
+                                        <li>Well Documented</li>
                                         <li>Easy To Use</li>
                                     </ul>
                                 </div>
