Added a Page Not Created Page

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Covid-19 Simulation</h3>
-                                <a class="btn" href="" data-lightbox="portfolio">+</a> <!-- TODO: link all'apposita pagina-->
+                                <a class="btn" href="./PageNotCreated.html">+</a> <!-- TODO: link all'apposita pagina-->
                             </div>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>IPC: Taxis in the City</h3>
-                                <a class="btn" href="" data-lightbox="portfolio">+</a> <!-- TODO: link all'apposita pagina-->
+                                <a class="btn" href="./PageNotCreated.html" >+</a> <!-- TODO: link all'apposita pagina-->
                             </div>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Recursive Parser</h3>
-                                <a class="btn" href="" data-lightbox="portfolio">+</a> <!-- TODO: link all'apposita pagina-->
+                                <a class="btn" href="./PageNotCreated.html" >+</a> <!-- TODO: link all'apposita pagina-->
                             </div>
                         </div>
                     </div>
@@ -371,7 +371,7 @@
                     <p>
                         For a limited amount of time I will be making sites that look like this with a 30% discount. Obviously, the final price will depend on the overall size of the website.
                     </p>
-                    <a class="btn">Order Now</a>
+                    <a class="btn" href="#price">Order Now</a>
                 </div>
             </div>
         </div>
@@ -466,7 +466,7 @@
                             </div>
                             <div class="price-footer">
                                 <div class="price-action">
-                                    <a class="btn" href="">Order Now</a>
+                                    <a class="btn" href="mailto:andrea.cacioli.1c@gmail.com?subject=Big Project Information">Order Now</a>
                                 </div>
                             </div>
                         </div>
