--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
+                <a href="#home" class="nav-item nav-link active">
+                    <img src="./img/LogoAle.jpeg" style="height: 64px; width: 64px; margin-left: 32px;">
+                </a>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto">
                         <a href="#home" class="nav-item nav-link active">Home</a>
@@ -321,6 +323,17 @@
                     </div>
                 </div>
                 <div class="row portfolio-container">
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.0s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="https://images.unsplash.com/photo-1617086286780-6e48d94cfa25?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2100&q=80" alt="Image"> <!-- TODO: save and cut these images-->
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>PathFinding</h3>
+                                <a class="btn" href="./PathFinding.html">+</a> <!-- TODO: link all'apposita pagina-->
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
