Added buggy but working table!

--- a/PathFinding.html
+++ b/PathFinding.html
@@ -55,7 +55,10 @@
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
 
+        <!--My scripts-->
         <script src="js/pathfinderClasses/pathfinder.js"></script>
+        <script src="js/pathfinderClasses/Node.js"></script>
+        <script src="js/pathfinderClasses/Grid.js"></script>
 
         
         
