Correction JavaFX -> JavaSwing

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
                                 <i class="fab fa-java"></i>
                             </div>
                             <div class="service-text">
-                                <h3>JavaFX Desktop Apps</h3>
+                                <h3>Java Swing Desktop Apps</h3>
                                 <p>
-                                    If what you need is a desktop app that can be portable onto macOS and Linux, Then JavaFX is what you need.
+                                    If what you need is a desktop app that can be portable onto macOS and Linux, then Java Swing is what you need.
                                 </p>
                             </div>
                         </div>
