--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
-                            <img src="img/hero.png" alt="Hero Image"> <!--Ricorda di mettere la tua foto-->
+                            <img src="img/hero.png" alt="Hero Image"> 
                         </div>
                     </div>
                 </div>
