--- a/index.html
+++ b/index.html
@@ -363,6 +363,17 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.0s">
+                        <div class="portfolio-wrap">
+                            <div class="portfolio-img">
+                                <img src="https://images.unsplash.com/photo-1602490487033-47e43479d51b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1094&q=80" alt="Image"> <!-- TODO: save and cut these images-->
+                            </div>
+                            <div class="portfolio-text">
+                                <h3>5 Towers Game</h3>
+                                <a class="btn" href="./5Towers.html">+</a> <!-- TODO: link all'apposita pagina-->
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
