--- a/5Towers.html
+++ b/5Towers.html
@@ -122,7 +122,7 @@
                     <h5>
                         You can download all of the repo if you wanna take a look at the code. Otherwise you can download the zip of the project and then <b>only use the .jar file in the versions folder</b>.
                     </h5>
-                    <div class="container">
+                    <div class="container" style="margin-top: 25px;">
                         <a class="btn" style="font-size: 35px; color: black; background-color:whitesmoke;" href="https://github.com/AndreaCacioli/5TowersGame/archive/refs/heads/main.zip">Download</a>
                         <a class="btn" style="font-size: 35px; color: black; background-color: whitesmoke;" href="./index.html">Go Back</a>
                     </div>
