Updated download section

--- a/5Towers.html
+++ b/5Towers.html
@@ -109,7 +109,12 @@
             </div>
         </div>
         <div id="Installation" style="display:flex; margin-bottom: 50px;">
-            <img src="./img/5TGif.gif" style="margin: 50px">
+
+            <video width="640" height="400" controls style="margin: 50px;">
+                <source src="./img/Video5Towers.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video> 
+
             <div id="Installation-Text">
                 <div class="section-header text-right">
                     <p>Installation</p>
@@ -117,11 +122,21 @@
                 </div>
                 <div class="about-text" style="margin-top: 20px; margin-bottom: 100px; font-weight: lighter;">
                     <h5> 
-                          You can find the game on my GitHub page: at this <a href="https://github.com/AndreaCacioli/5TowersGame">link</a>
+                          You can find the game on my GitHub page: at this <a href="https://github.com/AndreaCacioli/5TowersGame/archive/refs/heads/main.zip">link</a>
                     </h5>
-                    <h5>
-                        You can download all of the repo if you wanna take a look at the code. Otherwise you can download the zip of the project and then <b>only use the .jar file in the versions folder</b>.
-                    </h5>
+                    <h4>
+                        <ol style="margin-top: 20px;">
+                            <li><h5>Click on the download button. It'll download a zip folder.</h5></li>
+                            <li><h5>Move the zip folder to the directory where you want to keep the files (Ex: Desktop)</h5></li>
+                            <li><h5>Unpack the zip (Usualy a double click should do the trick) and delete it: you should be left with only a regular/non-zip folder</h5></li>
+                            <li><h5>Open the folder > Versions and click on the latest version for your operating system:</h5></li>
+                        </ol>
+                    </h4> 
+                    <h2>For Windows:</h2>
+                    <h5>Click on the .exe file</h5>  
+                    <h2>For MacOS/Linux:</h2>
+                    <h5>Click on the .jar file</h5>
+                    <h3 style="font-weight:bold;">Please remember to download the latest java version in order to run this program.</h3>
                     <div class="container" style="margin-top: 25px;">
                         <a class="btn" style="font-size: 35px; color: black; background-color:whitesmoke;" href="https://github.com/AndreaCacioli/5TowersGame/archive/refs/heads/main.zip">Download</a>
                         <a class="btn" style="font-size: 35px; color: black; background-color: whitesmoke;" href="./index.html">Go Back</a>
